--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,12 @@
   --background-rgb: 0, 0, 0;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
