--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,34 @@ body {
     text-wrap: balance;
   }
 }
+
+.avatar {
+  -webkit-animation: rainbow 8s steps(36) infinite;
+}
+
+@-webkit-keyframes rainbow {
+  0% {
+    -webkit-filter: hue-rotate(180deg);
+  }
+  50% {
+    -webkit-filter: hue-rotate(260deg);
+  }
+  100% {
+    -webkit-filter: hue-rotate(180deg);
+  }
+}
+
+@keyframes rainbow {
+  0% {
+    -webkit-filter: hue-rotate(180deg);
+    filter: hue-rotate(180deg);
+  }
+  50% {
+    -webkit-filter: hue-rotate(260deg);
+    filter: hue-rotate(260deg);
+  }
+  100% {
+    -webkit-filter: hue-rotate(180deg);
+    filter: hue-rotate(180deg);
+  }
+}
