--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "~react-toastify/dist/ReactToastify.min.css";
 
 :root {
   --foreground-rgb: 255, 255, 255;
